# conanTst

./: CMakeLists.txt  conanfile.py
baz/foo/: example.cpp
cmake/: bazfooConfig.cmake.in
